# sofi_cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
doc/: intro.md  main.dox
src/: CMakeLists.txt  sofi_demo.cpp  sqlite_cpp.cpp  sqlite_cpp.hpp  src.dox
src/soficpp/: agent.hpp  engine.hpp  entity.hpp  enum_str.hpp  integrity.hpp  operation.hpp  soficpp.dox  soficpp.hpp
test/: CMakeLists.txt  test_agent.cpp  test_dummy_boost.cpp  test_engine.cpp  test_entity.cpp  test_enum_str.cpp  test_integrity.cpp  test_sofi_demo.cpp
